# ForexAnalyzer

./: .gitignore  CMakeLists.txt  ChartObjecctModel.cpp  ChartObjecctModel.h  CsvLoader.cpp  LevelDetector.cpp  LevelDetector.h  Main.qml  README.md  TimeframeAggregator.cpp  TimeframeAggregator.h  TrendlineDetector.cpp  TrendlineDetector.h  main.cpp
components/: CandleChart.qml  CustomButton.qml  CustomToggle.qml
images/: Percentage.xlsx
include/: CandleModel.h  CandleUtils.h  ChartObjecctModel.h  ChartObjectModel.h  ChartObjects.h  CsvLoader.h  CsvWorker.h  EntryPointCalculator.h  HLevelBreaked.h  LevelDetector.h  PositionManager.h  PositionModel.h  StopLossCalculator.h  TakeProfitCalculator.h  TimeframeAggregator.h  TrendCalculator.h  TrendlineDetector.h  TwelveDataWorker.h
qml/: APIPage.qml  ChartPage.qml  ChartTools.qml  CurrencyModel.qml  InfographyPage.qml  LeftBar.qml  Main.qml  ResultPage.qml  StrategyPopup.qml  TitleBar.qml
qml/components/: AccordionItem.qml  CandleChart.qml  CircularGauge.qml  CustomButton.qml  CustomComboBox.qml  CustomProgressBar.qml  CustomRoundButton.qml  CustomSlider.qml  CustomTextField.qml  CustomToggle.qml  CustomToolTip.qml  GUIParameters.qml  OutcomeChart.qml  qmldir
qml/popups/: LoadChartPopup.qml  StrategyPopup.qml
sample csv/: EURUSD_M1_2026_05.csv
src/: CMakeLists.txt  CandleModel.cpp  ChartObjecctModel.cpp  ChartObjectModel.cpp  CsvLoader.cpp  CsvWorker.cpp  EntryPointCalculator.cpp  LevelDetector.cpp  PositionManager.cpp  PositionModel.cpp  StopLossCalculator.cpp  TakeProfitCalculator.cpp  TimeframeAggregator.cpp  TrendCalculator.cpp  TrendlineDetector.cpp  TwelveDataWorker.cpp  hlevelbreaked.cpp  main.cpp
tests/: CMakeLists.txt  XAUUSD.csv  test_csvloader.cpp  test_csvloader.h
tests/tst_CsvLoader/: CMakeLists.txt  tst_aggregator.cpp  tst_csvloader.cpp
